@@ -24,6 +24,7 @@ Bug Fixes:
 
 * Regression: Preserve message-level charset when adding parts (related to Rails ActionMailer) @shields
 * Regression: Adding a part should not reset the mail's charset to nil @railsbob
+* Fix exception when multibyte UTF-8 chars are in multipart boundary @pdg137
 
 Performance:
 
